[Fix] 리팩토링 전 정리